WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
261406
GraphicsContext::createImageBuffer should not create ImageBuffers that are backed by display lists
https://bugs.webkit.org/show_bug.cgi?id=261406
Summary
GraphicsContext::createImageBuffer should not create ImageBuffers that are ba...
Kimmo Kinnunen
Reported
2023-09-11 05:18:44 PDT
GraphicsContext::createImageBuffer should not create ImageBuffers that are backed by display lists The calling code which creates ImageBuffers is never agnostic to whether the created buffer is backed by a display list or not. If the calling code intends to use the display list as display list, it needs to access the list. This is done by creating DisplayList::Recorder explicitly. Even if the target GraphicsContext would be a DisplayList::Recorder, creating a new image buffer as a display list and drawing that to the target would end up resulting a bitmap drawn to the target.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-09-11 05:19:04 PDT
<
rdar://problem/115283169
>
Kimmo Kinnunen
Comment 2
2023-09-11 05:39:41 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/17649
EWS
Comment 3
2023-09-20 04:49:01 PDT
Committed
268193@main
(afbd4f014569): <
https://commits.webkit.org/268193@main
> Reviewed commits have been landed. Closing PR #17649 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug